# cppargs

./: .clang-format  CMakeLists.txt  README.md
cppargs/: arguments.cpp  cppargs.cpp  cppargs.hpp  exception.cpp  parameters.cpp  parse.cpp
test/: CMakeLists.txt  test.cpp
tests/: test.cpp
